# ghevolution

./: README.md  pyproject.toml
ghevolution/: __main__.py  actions.py  bounds.py  brain_view.py  genome.py  neural_network.py  senses.py  settings.py  survivor_plot.py  world.py  world_view.py
tests/: test_ghevolution.py
