[tool.poetry]
name = "ghevolution"
version = "0.1.0"
description = ""
authors = ["B-Ricey763 <39998963+B-Ricey763@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
bitarray = "^2.5.1"
bitstruct = "^8.15.1"
pygame = "^2.1.2"
networkx = "^2.8.4"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
